# open_trs

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: unit_tests.yml
open_trs/: __init__.py  auth.py  charges.py  configs.py  db.py  projects.py  schema.sql  server.py
open_trs/templates/: base.html
open_trs/templates/auth/: register.html
test/: test_server.py
tests/: conftest.py  data.sql  test_auth.py  test_charges.py  test_db.py  test_factory.py  test_projects.py
